[package]
name = "tower_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4.13"}
tokio = { version = "1.27.0", features = ["full"] }
hyper = { version = "0.14.26", features = ["full"] }
futures = "0.3.28"
log = "0.4.17"
env_logger = "0.10.0"
pin-project = "1.0.12"
